[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pricer"
version = "0.1.0"
description = "Streamlit app scaffold managed with uv."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "plotly>=6.7.0",
    "streamlit>=1.54.0",
]

[tool.setuptools.packages.find]
where = ["."]
